# taskpilot

./: .gitignore  README.md  pyproject.toml
backend/: alembic.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 3a795f2a230d_create_goals_and_tasks_tables.py
backend/app/: config.py  database.py  main.py
backend/app/api/v1/models/: __init__.py  agent.py
backend/app/api/v1/routes/: agent.py  automation.py  goals.py  planning.py  tasks.py
backend/app/api/v1/schemas/: agent.py  planning.py  task.py
cli/: config.py  taskpilot_cli.py
docs/: architecture.md  demo-kestra.md  project_spec.md
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/app/: globals.css  layout.js  page.tsx
frontend/src/app/plan/: page.js
frontend/src/app/status/: page.tsx
frontend/src/lib/: api.ts
kestra/: .env.example  README.md  docker-compose.yml
kestra/flows/main/: taskpilot_ai_agent.yml
